fixed comment text align

--- a/client/src/css/signform.css
+++ b/client/src/css/signform.css
@@ -4,7 +4,7 @@
     margin-left: auto;
     margin-right: auto;
   }
-  .form_content h1, p{
+  .form_content h1, .form_content p{
     text-align: center;
   }
   .form_content{
